--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ body {
 }
 
 .btn-primary:hover {
-    background-color: #c82333;
-    border-color: #bd2130;
+    background-color: #23c5c8;
+    border-color: #23c5c8;
 }
 
 /* New class for 5-column layout */
