--- a/style.css
+++ b/style.css
@@ -1,40 +1,707 @@
-body {
+* {
   margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #fff;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Faculty Glyphic", sans-serif;
+}
+.all-content {
+  background: rgb(233, 197, 208);
 }
 
-.container {
-  padding: 2rem;
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+/* navbar */
+#navbar {
+  background-color: #e86278;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
+#logo {
+  font-size: 23px;
+  color: white;
+}
+#logo img {
+  margin-bottom: 15px;
+}
+.navbar-nav {
+  margin-left: 10px;
+}
+.nav-link {
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgb(81, 0, 0);
+  margin-left: 15px;
+  transition: 0.5s ease;
+}
+.nav-link:hover {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(220, 52, 80);
+  color: white;
+  border-radius: 5px;
+}
+/* dropdown category */
+.dropdown-item {
+  margin-left: 10px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgb(81, 0, 0);
+  margin-right: 15px;
+  transition: 0.5s ease;
+}
+.dropdown-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e82d4c;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
+.dropdown-menu a {
+  color: rgb(146, 0, 51);
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgb(245, 171, 171);
+  margin-left: 15px;
+  transition: 0.5s ease;
+}
+.dropdown-menu a:hover {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(220, 52, 80);
+  color: rgb(255, 197, 225);
+  text-shadow: 1px 1px 1px rgb(81, 0, 0);
+  border-radius: 5px;
+}
+
+.dropdown-item dropdown-toggle {
+  display: flex;
+  justify-content: center;
+}
+/* dropdown category */
+
+.icons {
+  margin-left: 30px;
+}
+.icons img {
+  margin-left: 10px;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.icons img:hover {
+  transform: translateY(-5px);
+}
+@media screen and (max-width: 330px) {
+  #logo {
+    font-size: 15px;
+  }
+}
+/* navbar end */
+/* home section */
+.home {
+  width: 100%;
+  height: 88.5vh;
+  display: flex;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./img/backg.png);
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 0;
+}
+.home .img {
+  flex: 1 1 400px;
+}
+.home .img img {
+  width: 100%;
+}
+.home .content {
+  flex: 1 1 400px;
+  margin-left: 60px;
+}
+.content h3 {
+  color: white;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px black;
+}
+.content h2 {
+  font-size: 60px;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  font-weight: bold;
+}
+.changecontent::after {
+  content: " ";
+  color: #e86278;
+  animation: changetext 10s infinite linear;
+  font-weight: bold;
+}
+@keyframes changetext {
+  0% {
+    content: "Keychain";
+  }
+  20% {
+    content: "Strap Bag";
+  }
+  50% {
+    content: "Lanyard Phone";
+  }
+  60% {
+    content: "Hiasan Dinding";
+  }
+  100% {
+    content: "Custom Sesukamu!";
+  }
+}
+.content p {
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px black;
+}
+.content .btn {
+  width: 110px;
+  height: 38px;
+  background-color: #e86278;
+  color: white;
+}
+@media screen and (max-width: 800px) {
+  .content h3 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 860px) {
+  .home {
+    height: 120vh;
+  }
+}
+@media screen and (max-width: 560px) {
+  .home {
+    height: 100vh;
+  }
+}
+@media screen and (max-width: 330px) {
+  .content h2 {
+    font-size: 30px;
+  }
+  .content h3 {
+    font-size: 30px;
+  }
+}
+/* home section end */
+
+/* top cards */
+#box {
+  margin-top: 50px;
+}
+#box .card {
+  box-shadow: 0px 0px 5px black;
+  margin-top: 10px;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+#box .card:hover {
+  transform: translateY(-10px);
+}
+/* top cards end */
+/* banner */
+.banner {
+  width: 100%;
+  height: 88.5vh;
+  display: flex;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./img/backg.png);
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 0;
+  margin-top: 50px;
+}
+.banner .img {
+  flex: 1 1 400px;
+}
+.banner .img img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+.banner .content {
+  flex: 1 1 400px;
+  margin-left: 60px;
+}
+.banner .content h3 {
+  color: white;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px black;
+}
+.banner .content h2 {
+  font-size: 60px;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  font-weight: bold;
+}
+.banner .content p {
+  color: #e86278;
+}
+#btnorder button {
+  width: 150px;
+  height: 32px;
+  letter-spacing: 5px;
+  background-color: #e86278;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+@media screen and (max-width: 800px) {
+  .banner .content h3 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 1366px) {
+  .banner {
+    height: 120vh;
+  }
+}
+@media screen and (max-width: 560px) {
+  .banner {
+    height: 100vh;
+  }
+}
+@media screen and (max-width: 330px) {
+  .banner {
+    display: none;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .banner {
+    display: none;
+  }
+}
+/* banner end */
+/* product cards */
+#product-cards h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 50px;
+  color: #e86278;
+  text-shadow: 1px 1px 1px black;
+  border-bottom: 2px solid #e86278;
+}
+#product-cards .card {
+  background-color: #e86278;
+  box-shadow: 0 0 3px black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.overlay {
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 10%;
+  margin-left: 0;
+  width: 70px;
+}
+#product-cards .card:hover .overlay {
+  opacity: 1;
+  margin-left: 5%;
+  transition: 0.5s ease;
+}
+.overlay i img {
+  background-color: #652839;
+  height: 30px;
+  width: 30px;
+  font-size: 20px;
+  padding: 7px;
+  margin: -20%;
+  margin-bottom: 5%;
+  cursor: pointer;
+}
+.overlay .btn-secondary {
+  background: transparent !important;
+  border: none;
+  box-shadow: none;
+}
+#product-cards h3 {
+  color: white;
+  text-shadow: 1px 1px 1px black;
+}
+.star .checked {
+  color: yellow;
+}
+#product-cards p {
+  color: #ffe4f1;
+  font-weight: bold;
+}
+#product-cards h6 {
+  font-size: 20px;
+  color: #ffe4f1;
+  font-weight: bold;
+}
+#product-cards h6 span button {
+  color: #750013;
+  width: 100px;
+  height: 26px;
+  font-size: 15px;
+  background: transparent;
+  letter-spacing: 3px;
+  border: 2px solid #e86278;
+  border-radius: 5px;
+  float: right;
+  font-weight: bold;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+#product-cards h6 span button:hover {
+  background-color: antiquewhite;
+  color: rgb(255, 44, 79);
+}
+
+/* product cards end */
+
+/* gallary */
+#gallary {
+  margin-top: 50px;
+}
+#gallary h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 50px;
+  color: #e86278;
+  text-shadow: 1px 1px 1px black;
+  border-bottom: 2px solid #e86278;
+}
+#gallary .card {
+  box-shadow: 3px 3px 3px black;
+  cursor: pointer;
+}
+#gallary .overlay {
+  opacity: 0;
+  width: 100%;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+}
+#gallary .card:hover .overlay {
+  opacity: 5;
+  margin-top: 20%;
+  transition: 0.5s ease;
+}
+/* gallary */
+
+/* about */
+#about {
+  margin-top: 50px;
+}
+#about h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 50px;
+  color: #e86278;
+  text-shadow: 1px 1px 1px black;
+  border-bottom: 2px solid #e86278;
+}
+#about .card {
+  background-color: #e86278;
+  box-shadow: 0px 0px 5px black;
+}
+#about p {
+  color: #e86278;
+  word-spacing: 5px;
+  letter-spacing: 1.5px;
+  text-shadow: 1px 1px 1px rgb(255, 211, 233);
+  font-weight: bold;
+}
+#bt button {
+  width: 150px;
+  height: 32px;
+  letter-spacing: 3px;
+  background-color: #e86278;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (max-width: 1000px) {
+  #about p {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 760px) {
+  #about p {
+    font-size: 20px;
+  }
+}
+/* about */
+
+/* contact */
+#contact {
+  margin-top: 100px;
+}
+#contact h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 50px;
+  color: #e86278;
+  text-shadow: 1px 1px 1px rgb(255, 211, 233);
+  border-bottom: 2px solid #e86278;
+}
+#contact input {
+  background-color: #e86278;
+}
+#contact input::placeholder {
+  color: white;
+}
+#contact textarea {
+  background-color: #e86278;
+}
+#contact textarea::placeholder {
+  color: white;
+}
+#messagebtn {
   text-align: center;
 }
-
-.title {
-  font-size: 2rem;
-  color: #d63384;
-  margin-bottom: 2rem;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr); /* 5 card per baris */
-  gap: 20px;
-  justify-items: center;
-}
-
-.card {
+#messagebtn button {
+  width: 200px;
+  height: 30px;
+  letter-spacing: 3px;
+  font-weight: bold;
   background: transparent;
-  border: none;
-  padding: 10px;
-  transition: transform 0.3s;
+  border: 2px solid #e86278;
+  color: #e86278;
+  transition: 0.5s;
+  cursor: pointer;
 }
-
-.card:hover {
-  transform: scale(1.05);
+#messagebtn button:hover {
+  color: white;
+  border: 2px solid white;
+  background-color: #e86278;
 }
+/* contact */
 
-.card img {
+/* footer */
+
+/* after */
+/* footer */
+
+.footer {
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-around;
+  background-color: #e86278;
   width: 100%;
-  max-width: 150px;
-  border-radius: 12px;
+  height: auto;
+}
+
+.footer .teks {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 100px;
+  margin: 30px;
+}
+
+.footer .bag1 h1 {
+  font-size: 25px;
+  color: white;
+  text-shadow: 1px 1px 4px black;
+}
+
+.judul img {
+  width: 150px;
+}
+
+.footer .bag1 ul {
+  list-style: none;
+}
+
+.footer .bag1 ul li {
+  margin-top: 10px;
+}
+
+.footer .bag1 ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.footer .bag2 {
+  width: 300px;
+}
+
+.footer .bag2 h1 {
+  font-size: 35px;
+  color: white;
+  text-shadow: 1px 1px 4px black;
+}
+
+.footer .bag2 p {
+  font-size: 14px;
+  color: white;
+  margin-top: 10px;
+}
+
+.footer .bag3 {
+  width: 300px;
+}
+
+.footer .bag3 .logo5 {
+  margin-top: 10px;
+}
+
+.footer .bag3 .logo5 img {
+  width: 30px;
+}
+
+.bag3 {
+  text-align: center; /* Mengatur teks dan konten di dalam .bag3 menjadi rata tengah */
+}
+
+.logo5 {
+  margin: 20px 0; /* Menambahkan jarak vertikal di atas dan bawah div .logo5 */
+}
+
+.logo5 .ig a {
+  display: inline-block; /* Membuat tautan menjadi inline-block agar bisa diatur */
+}
+
+.logo5 .ig img {
+  max-width: 100%; /* Membuat gambar responsif */
+  height: auto; /* Memastikan tinggi gambar otomatis menyesuaikan proporsi */
+  margin: 0 auto; /* Menjaga gambar tetap di tengah jika ada ruang ekstra */
+}
+
+.footer .bag3 h1 {
+  font-size: 35px;
+  color: white;
+  text-shadow: 1px 1px 4px black;
+}
+
+.footer .bag3 p {
+  font-size: 14px;
+  color: white;
+  margin-top: 10px;
+}
+
+.wave svg {
+  margin-top: -14rem;
+}
+
+@media (max-width: 480px) {
+  .footer1 {
+    display: none;
+  }
+  #footer2 {
+    width: 100%;
+    background-color: #e86278;
+    box-shadow: 0px 0px 5px black;
+    margin-top: 50px;
+    padding-bottom: 50px;
+  }
+  #footer2 h1 {
+    color: white;
+    padding-top: 30px;
+  }
+  #footer2 p {
+    color: white;
+  }
+  .icons i {
+    background-color: white;
+    color: #e86278;
+    border-radius: 50px;
+    padding: 6px;
+    font-size: 30px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  .icons i:hover {
+    background-color: #e86278;
+    color: white;
+  }
+  /* before */
+  .container3 .kanan {
+    text-align: center;
+    width: 400px;
+    margin: auto;
+  }
+
+  .wave svg {
+    margin-top: 0;
+  }
+
+  .text {
+    text-align: justify;
+  }
+
+  .dalam2 hr {
+    display: none;
+  }
+
+  .kontainer1 {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+
+  .kontainer1 .bag1 {
+    margin-top: 0;
+    text-align: center;
+    width: 100%;
+  }
+
+  .kontainer1 .bag2 img {
+    width: 357px;
+    height: auto;
+  }
+}
+/* after */
+
+/* .copyright {
+  color: white;
+  margin-top: 20px;
+}
+.credite {
+  color: white;
+} */
+/* footer */
+
+html {
+  scroll-behavior: smooth;
+}
+.arrow {
+  position: fixed;
+  background-color: #e86278;
+  border-radius: 50px;
+  height: 50px;
+  bottom: 40px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+}
+@media (min-width: 767px) {
+  .footerke2 {
+    display: none;
+  }
 }
